--- a/styles/main.css
+++ b/styles/main.css
@@ -97,7 +97,7 @@ main .crypto-card:hover .refresh {
 	font-size: 20px;
 	background-color: var(--card-hover-color);
 	cursor: pointer;
-	padding: 10px;
+	padding: 10px 15px;
 	border-radius: 10px;
 	margin: 20px;
 }
