--- a/styles/main.css
+++ b/styles/main.css
@@ -66,6 +66,7 @@ main .crypto-card {
 	width: 300px;
 	padding: 10px 20px;
 	margin: 10px 20px 20px;
+	transition: all .2s;
 }
 
 main .crypto-card span {
@@ -80,6 +81,7 @@ main .crypto-card .refresh {
 	font-size: 13px;
 	opacity: 0.6;
 	cursor: pointer;
+	transition: all .5s;
 }
 
 main .crypto-card:hover {
@@ -88,7 +90,6 @@ main .crypto-card:hover {
 
 main .crypto-card:hover .refresh {
 	display: inline;
-	
 }
 
 .refresh-all {
